# TarsGo

./: .gitignore  .gitingnore  .golangci.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  Changelog.md  Contributing.md  LICENSE  README.md  README.zh.md  adapter.go  admin.go  application.go  communicator.go  config.go  endpointmanager.go  filter.go  go.mod  go.sum  httpserver.go  makefile.tars  message.go  nodef.go  remotelogger.go  servant.go  servanthandle.go  setting.go  tarsprotocol.go
.circleci/: config.yml
_examples/CmakeServer/: CMakeLists.txt  EchoTestServer.conf  EchoTestServer.go  go.mod  go.sum
_examples/CmakeServer/StressTest/: EchoTest.tars.go
_examples/CmakeServer/client/: client.go
cmake/: CMakeDetermineGoCompiler.cmake  golang.cmake  tars-tools.cmake
docs/: tars_go_performance.md  tars_go_quickstart.md  tars_go_quickstart_en.md
hack/: generate-tarsgo.sh
model/: Servant.go
protocol/: protoconst.go  tarsprotocol.go
tars/: README.md  adapter.go  admin.go  appcache.go  application.go  appprotocol.go  communicator.go  communicator_test.go  config.go  endpointmanager.go  errors.go  filter.go  hash_func.go  hash_func_test.go  httpserver.go  init.go  init_go113.go  logger.go  makefile.tars  makefile.tars.gomod  message.go  nodef.go  notifyf.go  object.go  options.go  panic.go  propertyf.go  rconfig.go  registry.go  remotelogger.go  servant.go  servanthandle.go  setting.go  statf.go  subset.go  tarsprotocol.go  transport.go
tars/tools/Demo4Cmake/: CMakeLists.txt  main.go  start.sh
tars/tools/Demo4Cmake/client/: CMakeLists.txt
tools/Demo/: go.mod  (+3 more)
(+497 files in other folders)
